--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
             <h1 class="subtitle is-6">Displays a paginated list of pokemon.</h1>
             <div>
                 <p v-if="loading">Loading...</p>
-                <poke-page v-else :detail-list="detailList" v-on:inc_offset="curr_offset += pokemonPerPage" @dec_offset="curr_offset -= pokemonPerPage"></poke-page>
+                <poke-page v-else :detail-list="detailList" @inc_offset="curr_offset += pokemonPerPage" @dec_offset="curr_offset -= pokemonPerPage"></poke-page>
             </div>
+
+            <footer class="footer">
+                <div class="content has-text-centered">
+                    <a href="https://github.com/jpstrommen95/CreativeProject3.git">Creative Project 3 GitHub</a>
+                </div>
+            </footer>
 
         </div>
 
